experiments/2023-05-30/verification_log/barthe/unaligned/bubblesort.log
/usr/bin/clang-10 -c -emit-llvm -D__SEAHORN__ -fdeclspec -O1 -Xclang -disable-llvm-optzns -fgnu89-inline -m64 -I/home/usea/seahorn/include -o /tmp/sea-tgxjdm0q/bubblesort.bc ./results/barthe/unaligned/bubblesort.c
./results/barthe/unaligned/bubblesort.c:9:1: warning: return type of 'main' is not 'int' [-Wmain-return-type]
void main() {
^
./results/barthe/unaligned/bubblesort.c:9:1: note: change return type to 'int'
void main() {
^~~~
int
./results/barthe/unaligned/bubblesort.c:42:19: error: use of undeclared identifier 'i'
    sassert(((a_1[i] >= a_2[_j]) && ((a_1[_j] - a_2[_j]) < epsilon)) || ((a_2[i] >= a_1[_j]) && ((a_2[_j] - a_1[_j]) < epsilon)));
                  ^
./results/barthe/unaligned/bubblesort.c:42:79: error: use of undeclared identifier 'i'
    sassert(((a_1[i] >= a_2[_j]) && ((a_1[_j] - a_2[_j]) < epsilon)) || ((a_2[i] >= a_1[_j]) && ((a_2[_j] - a_1[_j]) < epsilon)));
                                                                              ^
1 warning and 2 errors generated.

real	0m0.099s
user	0m0.059s
sys	0m0.020s
